fixed alignment of elements

--- a/public/console/css/charisma-app.css
+++ b/public/console/css/charisma-app.css
@@ -222,8 +222,8 @@ display: inline-block;
 font-size: 18px;
 font-weight: bold;
 margin-right: 10px;
-text-align: right;
-width: 70px;
+text-align: left;
+width: 150px;
 zoom: 1;
 }
 
